[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "help-you"
version = "0.2"
authors=[{name="Viktoria Cherevchenko"}]
description = "Console bot"
readme = "README.md"

requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["help_you"]

[project.scripts]
help_you = "main:main"